--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "crypto-js": "^4.2.0",
+    "flatted": "^3.3.2",
+    "moment": "^2.30.1",
     "mqtt": "^5.10.3",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "node-rsa": "^1.1.1"
   }
 }
