--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.7.8",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "flatted": "^3.3.2",
     "moment": "^2.30.1",
     "mqtt": "^5.10.3",
