--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "dahua_access_logs",
   "version": "1.0.0",
   "description": "Log Dahua DSS access control swipes to MySQL",
-  "main": "access_control.js",
+  "main": "Access-Attendance/access_control.js",
   "scripts": {
-    "start": "node access_control_logs.js"
+    "start": "node Access-Attendance/access_control_logs_oracle.js"
   },
   "dependencies": {
     "axios": "^1.7.8",
@@ -14,6 +14,7 @@
     "moment": "^2.30.1",
     "mqtt": "^5.10.3",
     "mysql2": "^3.11.4",
-    "node-rsa": "^1.1.1"
+    "node-rsa": "^1.1.1",
+    "oracledb": "^6.7.0"
   }
 }
