--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Log Dahua DSS access control swipes to MySQL",
   "main": "Access-Attendance/access_control.js",
   "scripts": {
-    "start": "node Access-Attendance/access_control_logs_oracle.js"
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop ecosystem.config.js",
+    "restart": "pm2 restart ecosystem.config.js",
+    "logs": "pm2 logs dss-access-logs",
+    "monitor": "pm2 monit",
+    "status": "pm2 list"
   },
   "dependencies": {
     "axios": "^1.7.8",
